infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apis
  labels:
    managed-by: devops-team
